Stop buttons on overflow + reset index to 0 (final photos-view commit)

--- a/splay-tv/static/style.css
+++ b/splay-tv/static/style.css
@@ -100,6 +100,9 @@ audio {
 #playlist-edit-empty {
   display: none;
 }
+#page-photos-view button:disabled {
+  color: gray;
+}
 #photos-view-img-container {
   display: flex;
   width: 100%;
